修复激光组件渲染偏移